--- a/projects/ionic-hide-onscroll/package.json
+++ b/projects/ionic-hide-onscroll/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ionic-hide-onscroll",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "description": "A plugin to hide elements on scroll",
+  "license": "MIT",
+  "private": false,
   "peerDependencies": {
     "@angular/common": "^8.1.3",
     "@angular/core": "^8.1.3"
